# plume-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: copyright.txt  sponza.mtl
configs/: dta-diffuse-config.json  dta-specular-config.json  nrc-config.json
engine/: CMakeLists.txt  plm_camera.cpp  plm_camera.h  plm_common.h  plm_inputs.cpp  plm_inputs.h  plm_lights.cpp  plm_lights.h  plm_main.cpp  plm_render.cpp  plm_render.h  plm_scene.cpp  plm_scene.h
render/: CMakeLists.txt  render_camera.cpp  render_camera.h  render_cfg.h  render_core.cpp  render_core.h  render_descriptors.cpp  render_descriptors.h  render_initializers.cpp  render_initializers.h  render_lights.cpp  render_lights.h  render_mesh.cpp  render_mesh.h  render_path_tracing.cpp  render_path_tracing.h  render_raytracing.cpp  render_raytracing.h  render_rt_backend_utils.cpp  render_rt_backend_utils.h  render_shader.cpp  render_shader.h  render_system.cpp  render_system.h  render_texture_utils.cpp  render_texture_utils.h  render_textures.cpp  render_textures.h  render_types.h
render/core/: CMakeLists.txt  render_cfg.h  render_core.h  render_descriptors.cpp  render_initializers.cpp  render_initializers.h  render_rt_backend_utils.h  render_shader.cpp  render_texture_utils.h  render_types.h
render/shaders/: bsdf.glsl  common.glsl  fxaa.frag  geometry_pass.frag  geometry_pass.vert  hit_properties.glsl  host_device_common.h  lighting_pass.frag  motion_vectors.frag  path_tracing.rahit  path_tracing.rchit  path_tracing.rgen  path_tracing.rmiss  path_tracing_utils.glsl  ray_common.glsl  sampling.glsl  skybox.frag  trace_shadow.rmiss
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  fxaa.frag  geometry_pass.frag  geometry_pass.vert  host_device_common.h  lighting_pass.frag  lighting_pass.vert  morrone_denoiser.frag  motion_vectors.frag  path_tracing.rchit  path_tracing.rgen  path_tracing.rmiss  postprocess.vert  ray_common.glsl  sampling.glsl  skybox.frag  skybox.vert  textured_lit.frag  tri_mesh.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  vk_camera.cpp  vk_camera.h  vk_cfg.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_nrc.h  vk_raytracing.cpp  vk_raytracing.h  vk_textures.cpp  vk_textures.h  vk_types.h
src/tcnn_wrapper/: CMakeLists.txt  tcnn_wrapper.cu  tcnn_wrapper.h
